Added saga column to compiled dataframe. Started on bi

--- a/analysis_and_visualisation.ipynb
+++ b/analysis_and_visualisation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "fbc8f902",
    "metadata": {},
    "outputs": [
@@ -188,18 +188,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "70f22ddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mal_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>title_romanji</th>\n",
+       "      <th>filler</th>\n",
+       "      <th>recap</th>\n",
+       "      <th>MAL_score</th>\n",
+       "      <th>MAL_poll_votes</th>\n",
+       "      <th>IMDb_score</th>\n",
+       "      <th>IMDb_total_votes</th>\n",
+       "      <th>r/dbz_rewatch_week</th>\n",
+       "      <th>r/dbz_karma_score</th>\n",
+       "      <th>r/dbz_upvote_ratio</th>\n",
+       "      <th>r/dbz_num_comments</th>\n",
+       "      <th>saga</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The New Threat</td>\n",
+       "      <td>Mini Gokuu wa Obotchama! Boku Gohan Desu.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>190</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>1414</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Saiyan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Reunions</td>\n",
+       "      <td>Shijou Saikyou no Senshi wa Gokuu no Ani Datta!</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>1377</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Saiyan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Unlikely Alliance</td>\n",
+       "      <td>Yatta! Kore ga Chijou Saikyou no Combo Da!</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>92</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>1366</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Saiyan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Piccolo's Plan</td>\n",
+       "      <td>Pikkolo no Kirifuda! Gohan wa Nakimushikun</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>77</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1374</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Saiyan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Gohan's Rage</td>\n",
+       "      <td>Gokuu Shisu! Last Chance wa Ichido Dake</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>79</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1357</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Saiyan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>287</td>\n",
+       "      <td>Celebrations with Majin Buu</td>\n",
+       "      <td>Modotta Heiwa!! Seigi no Mikata Majin Buu!?</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Majin Buu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>288</td>\n",
+       "      <td>He's Always Late</td>\n",
+       "      <td>Osoi ze Gokuu! Minna de Party!!</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>37</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>End of Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>289</td>\n",
+       "      <td>Granddaughter Pan</td>\n",
+       "      <td>Gokuu Ojii-chan! Watashi ga Pan yo!!</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>End of Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>290</td>\n",
+       "      <td>Buu's Reincarnation</td>\n",
+       "      <td>Oira wa Oob! Ima Jussai de Moto Majin!?</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>34</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>End of Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>291</td>\n",
+       "      <td>Goku's Next Journey</td>\n",
+       "      <td>Motto Tsuyoku!! Gokuu no Yume wa Chou Dekkee</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>236</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>End of Z</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>291 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mal_id                        title  \\\n",
+       "0         1               The New Threat   \n",
+       "1         2                     Reunions   \n",
+       "2         3            Unlikely Alliance   \n",
+       "3         4               Piccolo's Plan   \n",
+       "4         5                 Gohan's Rage   \n",
+       "..      ...                          ...   \n",
+       "286     287  Celebrations with Majin Buu   \n",
+       "287     288             He's Always Late   \n",
+       "288     289            Granddaughter Pan   \n",
+       "289     290          Buu's Reincarnation   \n",
+       "290     291          Goku's Next Journey   \n",
+       "\n",
+       "                                        title_romanji  filler  recap  \\\n",
+       "0          Mini Gokuu wa Obotchama! Boku Gohan Desu.    False  False   \n",
+       "1    Shijou Saikyou no Senshi wa Gokuu no Ani Datta!    False  False   \n",
+       "2         Yatta! Kore ga Chijou Saikyou no Combo Da!    False  False   \n",
+       "3         Pikkolo no Kirifuda! Gohan wa Nakimushikun    False  False   \n",
+       "4            Gokuu Shisu! Last Chance wa Ichido Dake    False  False   \n",
+       "..                                                ...     ...    ...   \n",
+       "286      Modotta Heiwa!! Seigi no Mikata Majin Buu!?    False  False   \n",
+       "287                  Osoi ze Gokuu! Minna de Party!!     True  False   \n",
+       "288             Gokuu Ojii-chan! Watashi ga Pan yo!!    False  False   \n",
+       "289          Oira wa Oob! Ima Jussai de Moto Majin!?    False  False   \n",
+       "290     Motto Tsuyoku!! Gokuu no Yume wa Chou Dekkee    False  False   \n",
+       "\n",
+       "     MAL_score  MAL_poll_votes  IMDb_score  IMDb_total_votes  \\\n",
+       "0          4.2             190         7.3              1414   \n",
+       "1          4.4             128         7.6              1377   \n",
+       "2          4.5              92         7.6              1366   \n",
+       "3          4.6              77         8.0              1374   \n",
+       "4          4.5              79         7.9              1357   \n",
+       "..         ...             ...         ...               ...   \n",
+       "286        4.8              39         7.4              1227   \n",
+       "287        4.5              37         7.1              1228   \n",
+       "288        4.6              38         6.9              1217   \n",
+       "289        4.6              34         6.8              1216   \n",
+       "290        4.4             236         6.8              1228   \n",
+       "\n",
+       "     r/dbz_rewatch_week  r/dbz_karma_score  r/dbz_upvote_ratio  \\\n",
+       "0                   1.0              110.0                0.89   \n",
+       "1                   1.0              110.0                0.89   \n",
+       "2                   1.0              110.0                0.89   \n",
+       "3                   1.0              110.0                0.89   \n",
+       "4                   1.0              110.0                0.89   \n",
+       "..                  ...                ...                 ...   \n",
+       "286                 NaN                NaN                 NaN   \n",
+       "287                 NaN                NaN                 NaN   \n",
+       "288                 NaN                NaN                 NaN   \n",
+       "289                 NaN                NaN                 NaN   \n",
+       "290                 NaN                NaN                 NaN   \n",
+       "\n",
+       "     r/dbz_num_comments       saga  \n",
+       "0                 115.0     Saiyan  \n",
+       "1                 115.0     Saiyan  \n",
+       "2                 115.0     Saiyan  \n",
+       "3                 115.0     Saiyan  \n",
+       "4                 115.0     Saiyan  \n",
+       "..                  ...        ...  \n",
+       "286                 NaN  Majin Buu  \n",
+       "287                 NaN   End of Z  \n",
+       "288                 NaN   End of Z  \n",
+       "289                 NaN   End of Z  \n",
+       "290                 NaN   End of Z  \n",
+       "\n",
+       "[291 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# {arc name: (first ep, last ep)}\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "sagas = {\"Saiyan\": (1,35),\n",
     "        \"Freeza\": (36,107),\n",
     "        \"Garlic Jr\": (108,117),\n",
     "        \"Cell\": (118,194),\n",
     "        \"Majin Buu\": (195,287),\n",
-    "        \"End of Z\": (288,291)}"
+    "        \"End of Z\": (288,291)}\n",
+    "df = pd.DataFrame(sagas.keys(), columns=[\"saga_name\"])\n",
+    "for s in sagas:\n",
+    "    df.loc[df[\"saga_name\"]==s,\"first_EpisodeNumber\"] = sagas[s][0]\n",
+    "    df.loc[df[\"saga_name\"]==s,\"last_EpisodeNumber\"] = sagas[s][1]\n",
+    "df[\"first_EpisodeNumber\"] = df[\"first_EpisodeNumber\"].astype(int)\n",
+    "df[\"last_EpisodeNumber\"] = df[\"last_EpisodeNumber\"].astype(int)\n",
+    "df.to_csv(\"data/saga_episodes.csv\")\n",
+    "\n",
+    "compiled_df[\"saga\"] = pd.NA\n",
+    "for i,row in df.iterrows():\n",
+    "    mask = (row[\"first_EpisodeNumber\"] <= compiled_df[\"mal_id\"])\\\n",
+    "        & (compiled_df[\"mal_id\"] <= row[\"last_EpisodeNumber\"])\n",
+    "    compiled_df[\"saga\"] = compiled_df[\"saga\"].mask(mask, row[\"saga_name\"])\n",
+    "    \n",
+    "compiled_df.to_csv(COMPILED_FILENAME)\n",
+    "compiled_df"
    ]
   },
   {
@@ -601,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
