Added legend to sagas score plot

--- a/analysis_and_visualisation.ipynb
+++ b/analysis_and_visualisation.ipynb
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "840d816e",
+   "id": "194c26b2",
    "metadata": {},
    "source": [
     "# Breakdown by Arc"
@@ -917,14 +917,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e35e5694",
+   "execution_count": 32,
+   "id": "caaa2a69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fd6a3b2b74c43adb783d436c6bfcdeb",
+       "model_id": "3c103deafe544d87be6922f495592c73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -957,18 +957,18 @@
     "    width = 0.4\n",
     "    fig, ax = plt.subplots()\n",
     "    ax2 = ax.twinx()\n",
-    "    df.plot(kind=\"bar\", x=\"mal_id\", y=\"IMDb_score\", color=\"red\", width=width, position=1, ax=ax, legend=False)\n",
-    "    df.plot(kind=\"bar\", x=\"mal_id\", y=\"MAL_score\", color=\"blue\", width=width, position=0, ax=ax2, legend=False)\n",
+    "    df.plot(kind=\"bar\", x=\"mal_id\", y=\"IMDb_score\", color=\"red\", width=width, position=1, ax=ax, legend=False, label=\"IMDb\")\n",
+    "    df.plot(kind=\"bar\", x=\"mal_id\", y=\"MAL_score\", color=\"blue\", width=width, position=0, ax=ax2, legend=False, label=\"MAL\")\n",
     "    \n",
     "    plt.title(f\"Saga: {saga}\")\n",
     "    plt.xlabel(\"Episode Number\")\n",
     "    ax.set_ylabel(\"IMDb Score\")\n",
     "    ax2.set_ylabel(\"MAL Score\")\n",
+    "    fig.legend()\n",
     "    \n",
     "    # get reasonable x ticks\n",
     "    xtick_interval = (max(df[\"mal_id\"])-min(df[\"mal_id\"]))//5\n",
     "    ticks = [xtick_interval*n for n in range(7) if xtick_interval*n <= max(df[\"mal_id\"])-min(df[\"mal_id\"])]\n",
-    "    print(ticks)\n",
     "    plt.xticks(ticks=ticks)\n",
     "    \n",
     "    \n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9959f5f0",
+   "id": "68fe2ded",
    "metadata": {},
    "outputs": [],
    "source": []
